2006-01-14 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
       * src/ObjectSelector/_Constants.py: enums
       * src/ObjectSelector/_Factories.py: multi object type factories
       * src/ObjectSelector/_FamilyFilterFrame.py: family support 
       * src/ObjectSelector/_FamilyPreviewFrame.py: family support 
       * src/ObjectSelector/_FamilyTreeFrame.py: family support 
       * src/ObjectSelector/_PersonTreeFrame.py: separated out person tree
       * src/ObjectSelector/_ObjectSelectorWindow.py: implemented view switching
       * src/ObjectSelector/_PersonPreviewFrame.py: implemented view switching
       * src/ObjectSelector/_PersonSearchCriteriaWidget.py: implemented view switching
	
2006-01-14  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs.py: fix scrolled window
	* src/EditFamily.py: delete button
	* src/gramps.glade: clean up the window.
	
2006-01-13  Don Allingham  <don@gramps-project.org>
	* src/const.py.in: remove unused variables
	* src/gramps.glade: remove unused dialogs
	* src/DisplayTabs.py: Move event list  
	* src/EditFamily.py: add editing of people, add relationship type
	* src/EventEdit.py: move event list
	* src/FamilyView.py: remove common widgets
	* src/gramps.glade: EditFamily changes
	* src/GrampsWidgets.py: Common widgets

2006-01-13  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py: Proper label change for Undo/Redo.

2006-01-13 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
    * src/ObjectSelector/_IntEdit.py: added int only edit

2006-01-13  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/PedView.py: Use the same font as used in the gtk style

2006-01-13 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
    * src/ObjectSelector/_ObjectSelectorWindow.py: layout improvements
	* src/ObjectSelector/_PersonPreviewFrame.py: layout improvements
	* src/ObjectSelector/_PersonSearchCriteriaWidget.py: layout improvements

2006-01-12  Don Allingham  <don@gramps-project.org>